gap times and durations now shows correctly on gap modal

--- a/client/components/linesBusesStyle.css
+++ b/client/components/linesBusesStyle.css
@@ -106,7 +106,7 @@
 }
 
 .gapModalTableHeader {
-  background-color: rgba(23, 2, 61, 0.6);
+  background-color: rgba(23, 2, 61, 0.8);
   color: #FFA804;
 }
 
